Solved Overlapping issue for Contractor Details.

--- a/src/assets/css/con.css
+++ b/src/assets/css/con.css
@@ -144,6 +144,7 @@ svg.MuiSvgIcon-root.arrow-left {
   font-size: 13px !important;
 }
 .see.pros {
+  margin-top: 35px;
   color: #02a3da !important;
   font-weight: 600 !important;
 }
